chore: upgrade Spring Boot to 4.0.5 and apply minor cleanups
- Bump spring-boot-starter-parent from 4.0.3 → 4.0.5
- Add @Column(nullable = false) constraints to User and Order entities
- Guard createdAt assignment in @PrePersist to prevent overwrite on update
- Replace String.format() with String.formatted() throughout
- Inject ObjectMapper via @Autowired in controller tests instead of constructing manually
- Switch ObjectMapper import to tools.jackson.databind in tests
- Remove redundant @Repository from UserRepository and OrderRepository
- Move TokenProvider constants to top of class; unbox jwtExpirationMinutes to long
- Use countUsers() instead of getUsers().isEmpty() in DatabaseInitializer
- Make DatabaseInitializer.getUsers() static
- Add jq preflight check to test-endpoints.sh
- Update brace-expansion to 1.1.13 and picomatch to 4.0.4 in lockfile
- Clarify DatabaseInitializer seeding behaviour and test file naming in AGENTS.md